--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,39 @@
+anyio==4.3.0
+asgiref==3.8.1
+blinker==1.8.1
 Brotli==1.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
+colorlog==6.8.2
+fastjsonschema==2.19.1
+Flask==3.0.3
+h11==0.14.0
+httptools==0.6.1
 idna==3.6
+itsdangerous==2.2.0
+Jinja2==3.1.3
+jsonpatch==1.33
+jsonpointer==2.4
+lxml==5.2.1
+MarkupSafe==2.1.5
 mutagen==1.47.0
+mypy-extensions==1.0.0
 numpy==1.26.4
 opencv-python-headless==4.9.0.80
 packaging==24.0
 pillow==10.2.0
 pycryptodomex==3.20.0
 pytesseract==0.3.10
+python-dotenv==1.0.1
+PyYAML==6.0.1
 requests==2.31.0
+sniffio==1.3.1
+typing_extensions==4.11.0
 urllib3==2.2.1
+uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
 websockets==12.0
+Werkzeug==3.0.2
 yt-dlp==2024.3.10
